[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/knight.png" type="Texture" id=1]
[ext_resource path="res://assets/meshes/simplePlane.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://assets/scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/spinattack.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/progress.png" type="Texture" id=5]
[ext_resource path="res://assets/scripts/spinAttackCooldownProgress.gd" type="Script" id=6]
[ext_resource path="res://assets/scripts/abilityCooldown.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/speedBoost.png" type="Texture" id=8]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 1 )

[sub_resource type="CylinderShape" id=2]
radius = 0.439003

[sub_resource type="Animation" id=3]
resource_name = "knightAttack"
tracks/0/type = "bezier"
tracks/0/path = NodePath("playerMesh:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("playerMesh:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("playerMesh:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("playerAttack:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("playerAttack:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("playerAttack:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("playerAttack/CollisionShape:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.672169, 0, -0.508606 ), Vector3( -0.119243, 0, -0.862908 ), Vector3( 0.47126, 0, -0.691126 ), Vector3( 0.847034, 0, -0.175778 ), Vector3( 0.0954849, 0, 0.860287 ), Vector3( -0.827847, 0, 0.146315 ), Vector3( -0.672169, 0, -0.492502 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "knightSpinPower"
length = 3.1
tracks/0/type = "bezier"
tracks/0/path = NodePath("playerMesh:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 38.666, -0.25, 0, 0.25, 0, 38.666, -0.25, 0, 0.25, 0, 38.666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 3.1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("playerMesh:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 5000, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 3.1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("playerMesh:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 3.1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("spinAttack:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.8, 0.9, 1.3, 1.4, 1.8, 1.9, 2.3, 2.6, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("spinAttack:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.8, 0.9, 1.3, 1.4, 1.8, 1.9, 2.3, 2.6, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("spinAttack:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.8, 0.9, 1.3, 1.4, 1.8, 1.9, 2.3, 2.6, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("spinAttack/CollisionShape:shape:radius")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.8, 0.9, 1.3, 1.4, 1.8, 1.9, 2.2, 2.3, 2.7, 2.8, 3.1 )
}

[sub_resource type="Animation" id=5]
resource_name = "knightWalk"
length = 0.9
tracks/0/type = "bezier"
tracks/0/path = NodePath("playerMesh:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 38.666, -0.25, 0, 0.25, 0, 39.7054, -0.25, 0, 0.25, 0, 35.8925, -0.25, 0, 0.25, 0, 38.666, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("playerMesh:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -4.49853, -0.25, 0, 0.25, 0, -2.52404, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("playerMesh:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -15.6736, -0.25, 0, 0.25, 0, 6.26538, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 )
}

[sub_resource type="CylinderShape" id=6]
radius = 0.673636

[sub_resource type="CylinderShape" id=7]
radius = 0.1

[node name="Player" type="KinematicBody"]
collision_layer = 1025
collision_mask = 1025
script = ExtResource( 3 )

[node name="playerMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.780801, -0.624779, 0, 0.624779, 0.780801, 0, -0.31736, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="playerAttack" type="Area" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="playerAttack"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.672169, 0, -0.508606 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/knightAttack = SubResource( 3 )
anims/knightSpinPower = SubResource( 4 )
anims/knightWalk = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, -6.51683e-07, 0, 1, 0, 6.51683e-07, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="spinAttack" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="spinAttack"]
shape = SubResource( 7 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
text = "TESTI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spinAttackButton" type="Button" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -80.0
margin_right = 1044.0
margin_bottom = 950.0
rect_scale = Vector2( 0.07, 0.07 )
focus_mode = 1
enabled_focus_mode = 1
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spinAttackCooldownProgress" type="TextureProgress" parent="HUD/spinAttackButton"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -1030.0
margin_right = 1029.0
max_value = 15.0
step = 0.05
value = 15.0
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 0.552941, 0.552941, 0.552941, 0.784314 )
nine_patch_stretch = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/spinAttackButton/spinAttackCooldownProgress"]
wait_time = 15.0
one_shot = true

[node name="speedBoostButton" type="Button" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -80.0
margin_right = 1132.0
margin_bottom = 950.0
rect_scale = Vector2( 0.07, 0.07 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="HUD/speedBoostButton"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -1030.0
margin_right = 1029.0
max_value = 7.0
step = 0.5
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 1, 1, 1, 0.784314 )
nine_patch_stretch = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/speedBoostButton/TextureProgress"]
wait_time = 7.0
one_shot = true

[node name="speedBoostTime" type="Timer" parent="HUD/speedBoostButton/TextureProgress"]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="playerAttack" to="." method="_on_playerAttack_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="spinAttack" to="." method="_on_spinAttack_area_entered"]
[connection signal="button_down" from="HUD/spinAttackButton" to="." method="_on_spinAttackButton_button_down"]
[connection signal="timeout" from="HUD/spinAttackButton/spinAttackCooldownProgress/Timer" to="HUD/spinAttackButton/spinAttackCooldownProgress" method="_on_Timer_timeout"]
[connection signal="button_down" from="HUD/speedBoostButton" to="." method="_on_speedBoostButton_button_down"]
[connection signal="timeout" from="HUD/speedBoostButton/TextureProgress/speedBoostTime" to="." method="_on_speedBoostTime_timeout"]
